--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -27,4 +27,4 @@ jobs:
     steps:
     # Runs a single command using the runners shell
     - name: Send greeting
-      run: echo "Hello ${{ github.event.inputs.name }} and ${{GITHUB_REPOSITORY}}"
+      run: echo "Hello ${{ github.event.inputs.name }} and ${{vars.REPOSITORY_VAR}}"
